[project]
name = "docs-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html-to-markdown>=1.3.3",
    "readabilipy>=0.3.0",
    "requests>=2.32.3",
    "textual>=3.3.0",
    "xdg-base-dirs>=6.0.2",
]
